add ssh proxy command config

--- a/~/.ssh/config
+++ b/~/.ssh/config
@@ -61,9 +61,16 @@ Host github.com
   Hostname ssh.github.com
   User git
   Port 443
-#  ProxyCommand ~/.zsh/02-proxy.zsh %h %p
 Host bitbucket.org
   Hostname altssh.bitbucket.org
   User git
   Port 443
-#  ProxyCommand ~/.zsh/02-proxy.zsh %h %p
+
+Host *
+#    proxycommand socat - PROXY:10.30.0.11:%h:%p,proxyport=8080,proxyauth=11050096:lo66e3z9
+    ControlMaster auto
+    ControlPath ~/.ssh/sockets/%r@%h:%p
+    ControlPersist 5m
+    ServerAliveInterval 5
+    ServerAliveCountMax 1
+    TCPKeepAlive yes
