update mpd mpv ncmpcpp config

--- a/~/.config/mpd/mpd.conf
+++ b/~/.config/mpd/mpd.conf
@@ -8,6 +8,7 @@ sticker_file			"~/.local/share/mpd/sticker.sql"
 
 auto_update			"yes"
 filesystem_charset		"UTF-8"
+id3v1_encoding			"UTF-8"
 restore_paused			"yes"
 
 #user				"nobody"
@@ -15,15 +16,16 @@ restore_paused			"yes"
 
 audio_output {
 	type		"alsa"
-	name		"HDA Intel PCH"
+	name             "HDA Intel PCH - ALC269VC Analog"
 	auto_channels	"no"
 	auto_format	"no"
-	period_time	"50000"
+	auto_resample	"no"
 }
 
 auto_update_depth "2"
 
 replaygain			"album"
+mixer_type			"none"
 
 #audio_output {
 #    type                    "fifo"
