--- a/~/.config/conky/conky.conf
+++ b/~/.config/conky/conky.conf
@@ -98,8 +98,8 @@ ${else}
 ${endif}
 ${endif}
 ${endif}
-# Memory: \uF30d
-{"full_text":"\uF1c0","color":"\#949494","separator":false,"separator_block_width":6},
+# Memory: \uF30d \uF00A \uf233
+{"full_text":"\uF30d","color":"\#949494","separator":false,"separator_block_width":6},
 {"full_text":"${if_match ${memperc}<30} ${memeasyfree}","color":"\#909737","separator":false,"separator_block_width":6},
 {"full_text":"${else}"},
 {"full_text":"${if_match ${memperc}<70} ${memeasyfree}","color":"\#b27d12","separator":false,"separator_block_width":6},
@@ -142,8 +142,8 @@ ${endif}
 {"full_text":"${execpi 30 todo.sh ls | grep -i "(A)" | wc -l}","color":"\#924020","separator":false,"separator_block_width":6},
 {"full_text":"${execpi 30 todo.sh ls | grep -i "(B)" | wc -l}","color":"\#b27d12","separator":false,"separator_block_width":6},
 {"full_text":"${execpi 30 todo.sh ls | wc -l}","color":"\#909737","separator":false,"separator_block_width":6},
-# Battery:
-{"full_text":"\uF214","color":"\#949494","separator":false,"separator_block_width":6},
+# Battery: \uf214 \uf0e7
+{"full_text":"\uF0e7","color":"\#949494","separator":false,"separator_block_width":6},
 {"full_text":"${if_match ${battery_percent}<30}${battery_percent}%","color":"\#924020","separator":false,"separator_block_width":6},
 {"full_text":"${else}"},
 {"full_text":"${if_match ${battery_percent}<70}${battery_percent}%","color":"\#b27d12","separator":false,"separator_block_width":6},
