update conky & htop & ncmpcpp & vifm & zsh config

--- a/~/.config/conky/conky.conf
+++ b/~/.config/conky/conky.conf
@@ -13,38 +13,50 @@ conky.config = {
 
 conky.text = [[
 [
+# MPD
 ${if_match "${mpd_status}" == "Playing"}
 	{"full_text":"\uF001 ${mpd_smart} ${mpd_bar 1,10} \uF001 |", "color":"\#949494","separator":false},
 ${endif}
+
 # CPU temperature:
 {"full_text":"\uF109","color":"\#949494","separator":false,"separator_block_width":6},
-{"full_text":"${if_match ${acpitemp}<45}${acpitemp}°C","color":"\#909737","separator":false,"separator_block_width":6},
-{"full_text":"${else}"},
-{"full_text":"${if_match ${acpitemp}<55}${acpitemp}°C","color":"\#b27d12","separator":false,"separator_block_width":6},
-{"full_text":"${else}"},
-{"full_text":"${if_match ${acpitemp}>=55}${acpitemp}°C","color":"\#a25030","separator":false,"separator_block_width":6},
-{"full_text":"${else}"},
-{"full_text":"${endif}${endif}${endif}"},
+${if_match ${acpitemp}<45}
+	{"full_text":"${acpitemp}°C","color":"\#909737","separator":false,"separator_block_width":6},
+${else}
+${if_match ${acpitemp}<55}
+	{"full_text":"${acpitemp}°C","color":"\#b27d12","separator":false,"separator_block_width":6},
+${else}
+${if_match ${acpitemp}>=55}
+	{"full_text":"${acpitemp}°C","color":"\#a25030","separator":false,"separator_block_width":6},
+${else}
+${endif}${endif}${endif}
+
 #NETWORK STRENGTH \uF012
 {"full_text":"\uF1eb","color":"\#949494","separator":false,"separator_block_width":6},
 {"full_text":"${execi 2 ~/.config/conky/getNetwokStrength.sh}","color":"\#909737","separator":false},
 # Download:
 {"full_text":"\uF0ed","color":"\#949494","separator":false,"separator_block_width":6},
 ${if_match ${downspeedf enp9s0}>0}
-	{"full_text":"${if_match ${downspeedf enp9s0}<1000}${downspeed enp9s0}","color":"\#909737","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${downspeedf enp9s0}<3000}${downspeed enp9s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${downspeedf enp9s0}>=3000}${downspeed enp9s0}","color":"\#924020","separator":false,"separator_block_width":6},
-	{"full_text":"${endif}${endif}${endif}"},
+	${if_match ${downspeedf enp9s0}<1000}
+		{"full_text":"${downspeed enp9s0}","color":"\#909737","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${downspeedf enp9s0}<3000}
+		{"full_text":"${downspeed enp9s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${downspeedf enp9s0}>=3000}
+		{"full_text":"${downspeed enp9s0}","color":"\#924020","separator":false,"separator_block_width":6},
+	${endif}${endif}${endif}
 ${else}
 ${if_match ${downspeedf wlp8s0}>0}
-	{"full_text":"${if_match ${downspeedf wlp8s0}<1000}${downspeed wlp8s0}","color":"\#909737","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${downspeedf wlp8s0}<3000}${downspeed wlp8s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${downspeedf wlp8s0}>=3000}${downspeed wlp8s0}","color":"\#924020","separator":false,"separator_block_width":6},
-	{"full_text":"${endif}${endif}${endif}"},
+	${if_match ${downspeedf wlp8s0}<1000}
+		{"full_text":"${downspeed wlp8s0}","color":"\#909737","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${downspeedf wlp8s0}<3000}
+		{"full_text":"${downspeed wlp8s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${downspeedf wlp8s0}>=3000}
+		{"full_text":"${downspeed wlp8s0}","color":"\#924020","separator":false,"separator_block_width":6},
+	${endif}${endif}${endif}
 ${else}
 ${if_match ${downspeedf enp0s26u1u2}>0}
 	{"full_text":"${if_match ${downspeedf enp0s26u1u2}<1000}${downspeed enp0s26u1u2}","color":"\#909737","separator":false,"separator_block_width":6},
@@ -74,12 +86,15 @@ ${if_match ${upspeedf enp9s0}>0}
 	{"full_text":"${endif}${endif}${endif}"},
 ${else}
 ${if_match ${upspeedf wlp8s0}>0}
-	{"full_text":"${if_match ${upspeedf wlp8s0}<1000}${upspeed wlp8s0}","color":"\#909737","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${upspeedf wlp8s0}<3000}${upspeed wlp8s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${upspeedf wlp8s0}>=3000}${upspeed wlp8s0}","color":"\#924020","separator":false,"separator_block_width":6},
-	{"full_text":"${endif}${endif}${endif}"},
+	${if_match ${upspeedf wlp8s0}<1000}
+		{"full_text":"${upspeed wlp8s0}","color":"\#909737","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${upspeedf wlp8s0}<3000}
+		{"full_text":"${upspeed wlp8s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${upspeedf wlp8s0}>=3000}
+		{"full_text":"${upspeed wlp8s0}","color":"\#924020","separator":false,"separator_block_width":6},
+	${endif}${endif}${endif}
 ${else}
 ${if_match ${upspeedf enp0s26u1u2}>0}
 	{"full_text":"${if_match ${upspeedf enp0s26u1u2}<1000}${upspeed enp0s26u1u2}","color":"\#909737","separator":false,"separator_block_width":6},
@@ -98,22 +113,31 @@ ${else}
 ${endif}
 ${endif}
 ${endif}
+
 # Memory: \uF30d \uF00A \uf233
 {"full_text":"\uF30d","color":"\#949494","separator":false,"separator_block_width":6},
-{"full_text":"${if_match ${memperc}<30} ${memeasyfree}","color":"\#909737","separator":false,"separator_block_width":6},
-{"full_text":"${else}"},
-{"full_text":"${if_match ${memperc}<70} ${memeasyfree}","color":"\#b27d12","separator":false,"separator_block_width":6},
-{"full_text":"${else}"},
-{"full_text":"${if_match ${memperc}>=70} ${memeasyfree}","color":"\#924020","separator":false,"separator_block_width":6},
-{"full_text":"${endif}${endif}${endif}"},
+${if_match ${memperc}<30}
+	{"full_text":" ${memeasyfree}","color":"\#909737","separator":false,"separator_block_width":6},
+${else}
+${if_match ${memperc}<70}
+	{"full_text":" ${memeasyfree}","color":"\#b27d12","separator":false,"separator_block_width":6},
+${else}
+${if_match ${memperc}>=70}
+	{"full_text":" ${memeasyfree}","color":"\#924020","separator":false,"separator_block_width":6},
+${endif}${endif}${endif}
+
 # CPU:
 {"full_text":"\uF0e4","color":"\#949494","separator":false,"separator_block_width":6},
-{"full_text":"${if_match ${cpu cpu0}<50}${cpu cpu0}%","color":"\#909737","separator":false,"separator_block_width":6},
-{"full_text":"${else}"},
-{"full_text":"${if_match ${cpu cpu0}<60E}${cpu cpu0}%","color":"\#b27d12","separator":false,"separator_block_width":6},
-{"full_text":"${else}"},
-{"full_text":"${if_match ${cpu cpu0}<=100}${cpu cpu0}%","color":"\#924020","separator":false,"separator_block_width":6},
-{"full_text":"${endif}${endif}${endif}"},
+${if_match ${cpu cpu0}<50}
+	{"full_text":"${cpu cpu0}%","color":"\#909737","separator":false,"separator_block_width":6},
+${else}
+${if_match ${cpu cpu0}<60E}
+	{"full_text":"${cpu cpu0}%","color":"\#b27d12","separator":false,"separator_block_width":6},
+${else}
+${if_match ${cpu cpu0}<=100}
+	{"full_text":"${cpu cpu0}%","color":"\#924020","separator":false,"separator_block_width":6},
+${endif}${endif}${endif}
+
 # Weather: \uF3b6
 #{"full_text":"\uF185","color":"\#949494","separator":false,"separator_block_width":6},
 #{"full_text":"${execpi 120 ~/.config/conky/weather.sh}°","color":"\#909737","separator":false,"separator_block_width":6},
@@ -128,34 +152,44 @@ ${else}
 	{"full_text":"${new_mails mail 30}","color":"\#924020","separator":false,"separator_block_width":6},
 ${endif}
 ${endif}
+
 # RSS
 {"full_text":"\uF09e","color":"\#949494","separator":false,"separator_block_width":6},
-{"full_text":"${if_match ${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0}>0}"},
-{"full_text":"${if_match ${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*"}<=10}${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*"}","color":"\#b27d12","separator":false,"separator_block_width":6},
-{"full_text":"${else}"},
-{"full_text":"${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*"}","color":"\#924020","separator":false,"separator_block_width":6},
-{"full_text":"${endif}${else}"},
-{"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
-{"full_text":"${endif}"},
+${if_match ${execp newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0} > 0}
+	${if_match ${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*"}<=10}
+		{"full_text":"${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*"}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	${else}
+		{"full_text":"${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*"}","color":"\#924020","separator":false,"separator_block_width":6},
+	${endif}
+${else}
+	{"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
+${endif}
+
 #TODO.TXT
 {"full_text":"\uF03A","color":"\#949494","separator":false,"separator_block_width":6},
 {"full_text":"${execpi 30 todo.sh ls | grep -i "(A)" | wc -l}","color":"\#924020","separator":false,"separator_block_width":6},
 {"full_text":"${execpi 30 todo.sh ls | grep -i "(B)" | wc -l}","color":"\#b27d12","separator":false,"separator_block_width":6},
 {"full_text":"${execpi 30 todo.sh ls | wc -l}","color":"\#909737","separator":false,"separator_block_width":6},
+
 # Battery: \uf214 \uf0e7
 {"full_text":"\uF0e7","color":"\#949494","separator":false,"separator_block_width":6},
-{"full_text":"${if_match ${battery_percent}<30}${battery_percent}%","color":"\#924020","separator":false,"separator_block_width":6},
-{"full_text":"${else}"},
-{"full_text":"${if_match ${battery_percent}<70}${battery_percent}%","color":"\#b27d12","separator":false,"separator_block_width":6},
-{"full_text":"${else}"},
-{"full_text":"${if_match ${battery_percent}>=70}${battery_percent}%","color":"\#909737","separator":false,"separator_block_width":6},
-{"full_text":"${endif}${endif}${endif}"},
+${if_match ${battery_percent}<30}
+	{"full_text":"${battery_percent}%","color":"\#924020","separator":false,"separator_block_width":6},
+${else}
+${if_match ${battery_percent}<70}
+	{"full_text":"${battery_percent}%","color":"\#b27d12","separator":false,"separator_block_width":6},
+${else}
+${if_match ${battery_percent}>=70}
+	{"full_text":"${battery_percent}%","color":"\#909737","separator":false,"separator_block_width":6},
+${endif}${endif}${endif}
+
 # Volume:
 {"full_text":"\uF028","color":"\#949494","separator":false,"separator_block_width":6},
 {"full_text":"${execi 1 amixer sget Master,0 | egrep -o '([0-9]+%|\[(on|off)\])' | sed ':a;N;$!ba;s/\n/ /g'}","color":"\#909737","separator":false},
 # Date: \uF073
 {"full_text":"|","color":"\#949494","separator":false,"separator_block_width":6},
 {"full_text":"${time %d/%m/%y}","color":"\#aaaaaa","separator":false,"separator_block_width":6},
+
 # Time: \uF017
 {"full_text":"|","color":"\#949494","separator":false,"separator_block_width":6},
 {"full_text":"${time %H:%M}","color":"\#aaaaaa","separator":false}
