update conky & vifm & firefox config

--- a/~/.config/conky/conky.conf
+++ b/~/.config/conky/conky.conf
@@ -34,6 +34,7 @@ ${endif}${endif}${endif}
 #NETWORK STRENGTH \uF012
 {"full_text":"\uF1eb","color":"\#949494","separator":false,"separator_block_width":6},
 {"full_text":"${execi 2 ~/.config/conky/getNetwokStrength.sh}","color":"\#909737","separator":false},
+
 # Download:
 {"full_text":"\uF0ed","color":"\#949494","separator":false,"separator_block_width":6},
 ${if_match ${downspeedf enp9s0}>0}
@@ -59,31 +60,53 @@ ${if_match ${downspeedf wlp8s0}>0}
 	${endif}${endif}${endif}
 ${else}
 ${if_match ${downspeedf enp0s26u1u2}>0}
-	{"full_text":"${if_match ${downspeedf enp0s26u1u2}<1000}${downspeed enp0s26u1u2}","color":"\#909737","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${downspeedf enp0s26u1u2}<3000}${downspeed enp0s26u1u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${downspeedf enp0s26u1u2}>=3000}${downspeed enp0s26u1u2}","color":"\#924020","separator":false,"separator_block_width":6},
-	{"full_text":"${endif}${endif}${endif}"},
+	${if_match ${downspeedf enp0s26u1u2}<1000}
+		{"full_text":"${downspeed enp0s26u1u2}","color":"\#909737","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${downspeedf enp0s26u1u2}<3000}
+		{"full_text":"${downspeed enp0s26u1u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${downspeedf enp0s26u1u2}>=3000}
+		{"full_text":"${downspeed enp0s26u1u2}","color":"\#924020","separator":false,"separator_block_width":6},
+	${endif}${endif}${endif}
 ${else}
-	{"full_text":"${if_match ${downspeedf enp0s20u1}<1000}${downspeed enp0s20u1}","color":"\#909737","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${downspeedf enp0s20u1}<3000}${downspeed enp0s20u1}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${downspeedf enp0s20u1}>=3000}${downspeed enp0s20u1}","color":"\#924020","separator":false,"separator_block_width":6},
-	{"full_text":"${endif}${endif}${endif}"},
-${endif}
-${endif}
-${endif}
+${if_match ${downspeedf enp0s20u1}>0}
+	${if_match ${downspeedf enp0s20u1}<1000}
+		{"full_text":"${downspeed enp0s20u1}","color":"\#909737","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${downspeedf enp0s20u1}<3000}
+		{"full_text":"${downspeed enp0s20u1}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${downspeedf enp0s20u1}>=3000}
+		{"full_text":"${downspeed enp0s20u1}","color":"\#924020","separator":false,"separator_block_width":6},
+	${endif}${endif}${endif}
+${else}
+${if_match ${downspeedf enp0s20u2}>0}
+	${if_match ${downspeedf enp0s20u2}<1000}
+		{"full_text":"${downspeed enp0s20u2}","color":"\#909737","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${downspeedf enp0s20u2}<3000}
+		{"full_text":"${downspeed enp0s20u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${downspeedf enp0s20u2}>=3000}
+		{"full_text":"${downspeed enp0s20u2}","color":"\#924020","separator":false,"separator_block_width":6},
+	${endif}${endif}${endif}
+${else}
+	{"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
+${endif}${endif}${endif}${endif}${endif}
+
 # Upload:
 {"full_text":"\uF0ee","color":"\#949494","separator":false,"separator_block_width":6},
 ${if_match ${upspeedf enp9s0}>0}
-	{"full_text":"${if_match ${upspeedf enp9s0}<1000}${upspeed enp9s0}","color":"\#909737","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${upspeedf enp9s0}<3000}${upspeed enp9s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${upspeedf enp9s0}>=3000}${upspeed enp9s0}","color":"\#924020","separator":false,"separator_block_width":6},
-	{"full_text":"${endif}${endif}${endif}"},
+	${if_match ${upspeedf enp9s0}<1000}
+		{"full_text":"${upspeed enp9s0}","color":"\#909737","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${upspeedf enp9s0}<3000}
+		{"full_text":"${upspeed enp9s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${upspeedf enp9s0}>=3000}
+		{"full_text":"${upspeed enp9s0}","color":"\#924020","separator":false,"separator_block_width":6},
+	${endif}${endif}${endif}
 ${else}
 ${if_match ${upspeedf wlp8s0}>0}
 	${if_match ${upspeedf wlp8s0}<1000}
@@ -97,22 +120,40 @@ ${if_match ${upspeedf wlp8s0}>0}
 	${endif}${endif}${endif}
 ${else}
 ${if_match ${upspeedf enp0s26u1u2}>0}
-	{"full_text":"${if_match ${upspeedf enp0s26u1u2}<1000}${upspeed enp0s26u1u2}","color":"\#909737","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${upspeedf enp0s26u1u2}<3000}${upspeed enp0s26u1u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${upspeedf enp0s26u1u2}>=3000}${upspeed enp0s26u1u2}","color":"\#924020","separator":false,"separator_block_width":6},
-	{"full_text":"${endif}${endif}${endif}"},
+	${if_match ${upspeedf enp0s26u1u2}<1000}
+		{"full_text":"${upspeed enp0s26u1u2}","color":"\#909737","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${upspeedf enp0s26u1u2}<3000}
+		{"full_text":"${upspeed enp0s26u1u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${upspeedf enp0s26u1u2}>=3000}
+		{"full_text":"${upspeed enp0s26u1u2}","color":"\#924020","separator":false,"separator_block_width":6},
+	${endif}${endif}${endif}
 ${else}
-	{"full_text":"${if_match ${upspeedf enp0s20u1}<1000}${upspeed enp0s20u1}","color":"\#909737","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${upspeedf enp0s20u1}<3000}${upspeed enp0s20u1}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	{"full_text":"${else}"},
-	{"full_text":"${if_match ${upspeedf enp0s20u1}>=3000}${upspeed enp0s20u1}","color":"\#924020","separator":false,"separator_block_width":6},
-	{"full_text":"${endif}${endif}${endif}"},
-${endif}
-${endif}
-${endif}
+${if_match ${upspeedf enp0s20u1}>0}
+	${if_match ${upspeedf enp0s20u1}<1000}
+		{"full_text":"${upspeed enp0s20u1}","color":"\#909737","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${upspeedf enp0s20u1}<3000}
+		{"full_text":"${upspeed enp0s20u1}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${upspeedf enp0s20u1}>=3000}
+		{"full_text":"${upspeed enp0s20u1}","color":"\#924020","separator":false,"separator_block_width":6},
+	${endif}${endif}${endif}
+${else}
+${if_match ${upspeedf enp0s20u2}>0}
+	${if_match ${upspeedf enp0s20u2}<1000}
+		{"full_text":"${upspeed enp0s20u2}","color":"\#909737","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${upspeedf enp0s20u2}<3000}
+		{"full_text":"${upspeed enp0s20u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${upspeedf enp0s20u2}>=3000}
+		{"full_text":"${upspeed enp0s20u2}","color":"\#924020","separator":false,"separator_block_width":6},
+	${endif}${endif}${endif}
+${else}
+	{"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
+${endif}${endif}${endif}${endif}${endif}
 
 # Memory: \uF30d \uF00A \uf233
 {"full_text":"\uF30d","color":"\#949494","separator":false,"separator_block_width":6},
@@ -155,7 +196,7 @@ ${endif}
 
 # RSS
 {"full_text":"\uF09e","color":"\#949494","separator":false,"separator_block_width":6},
-${if_match ${execp newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0} > 0}
+${if_match ${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0} > 0}
 	${if_match ${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*"}<=10}
 		{"full_text":"${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*"}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
