--- a/etc/X11/xorg.conf.d/20-radeon.conf
+++ b/etc/X11/xorg.conf.d/20-radeon.conf
@@ -1,11 +1,13 @@
 Section "Device"
     Identifier "Radeon"
     Driver "radeon"
-    Option "EnablePageFlip"  "on"
-    # Option "TearFree"        "on" # disable dri2 pageflip when enabling it
+    # Option "EnablePageFlip"  "on"
+    Option "TearFree"        "on" # disable dri2 pageflip when enabling it
     Option "AccelMethod"     "glamor"
     Option "RenderAccel"     "on"
     Option "ColorTiling"     "on"
     Option "ColorTiling2D"   "on"
-    Option "DRI3"            "1"
+
+    # Option "DRI3"            "1"
+    Option "DRI"             "3"
 EndSection
