update fstab & hosts & hostapd & laptop_mode & resolv.conf & schroot & sshd & firefox config

--- a/etc/laptop-mode/conf.d/auto-hibernate.conf
+++ b/etc/laptop-mode/conf.d/auto-hibernate.conf
@@ -40,7 +40,8 @@ ENABLE_AUTO_HIBERNATION=1
 # The hibernation command that is to be executed when auto-hibernation
 # is triggered.
 #
-HIBERNATE_COMMAND=/usr/share/laptop-mode-tools/module-helpers/pm-suspend
+#HIBERNATE_COMMAND=/usr/share/laptop-mode-tools/module-helpers/pm-suspend
+HIBERNATE_COMMAND="/usr/bin/systemctl suspend"
 
 
 #
