--- a/etc/laptop-mode/conf.d/video-out.conf
+++ b/etc/laptop-mode/conf.d/video-out.conf
@@ -25,6 +25,6 @@ CONTROL_VIDEO_OUTPUTS=0
 
 # Display types to disable in various modes. Run "xrandr" to check which outputs
 # are available. Make sure that you do not list your primary display here!
-BATT_DISABLE_VIDEO_OUTPUTS="HDMI VGA VGA-0 HDMI-0"
+BATT_DISABLE_VIDEO_OUTPUTS="HDMI VGA VGA-0 HDMI-0 HDMI-A-1 VGA-1"
 LM_AC_DISABLE_VIDEO_OUTPUTS="HDMI VGA"
 NOLM_AC_DISABLE_VIDEO_OUTPUTS=""
