--- a/etc/resolv.conf
+++ b/etc/resolv.conf
@@ -1,4 +1,6 @@
-nameserver 127.0.0.1
-nameserver 8.8.8.8
+#nameserver 192.168.1.1  # router and 3g
+#nameserver 10.30.0.11   # school internal DNS
+nameserver 127.0.0.1    # dnsmasq
+nameserver 8.8.8.8      # Google
 # set timeout to 1s
 options timeout:1
